--- a/love.css
+++ b/love.css
@@ -49,12 +49,12 @@ body {
   margin-left: -13px;
   opacity: 0;
   color: #fff;
-  font-size: 26px;
-  font-family: 'Glyphicons Halflings';
-  content: '\e003';
+  font-size: 18px;
+  content: var(--content, "");
   pointer-events: none;
   z-index: 9000;
   transition: 0.4s;
+  display: block;
 }
 
 
@@ -65,7 +65,7 @@ body {
   width: 100%;
   height: 100%;
   opacity: 0;
-  background-color: rgba(46, 132, 206, 0.7);
+  background-color: rgba(51, 61, 70, 0.8);
   content: '';
   transition: 0.4s;
 }
