--- a/love.css
+++ b/love.css
@@ -1,152 +1,78 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Allison&display=swap');
-
-body {
-  background-color: #ffff;
+/* Import Google font - Poppins */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+body{
+  display: flex;
+  padding: 0 35px;
   min-height: 100vh;
-  font: normal 16px sans-serif;
-  padding: 40px 0;
-  font-family: 'Garamond', sans-serif;
+  align-items: center;
+  justify-content: center;
+  background: #343F4F;
 }
-
-
-.gallery-container h1 {
-  text-align: center;
-  margin-top: 50px;
-  font-weight: bold;
-  font-size: 135px;
-  font-family: 'Allison', cursive;
-}
-
-.gallery-container p.page-description {
-  text-align: center;
-  margin: 15px;
-  font-size: 38px;
-  color: #000000;
-  font-family: 'Garamond', sans-serif;
-}
-
-.tz-gallery {
-  padding: 40px;
-}
-
-/* Override bootstrap column paddings */
-.tz-gallery .row > div {
-  padding: 2px;
-}
-
-.tz-gallery .lightbox img {
-  width: 100%;
-  border-radius: 0;
+.wrapper{
+  display: flex;
+  max-width: 1200px;
   position: relative;
 }
-
-.tz-gallery .lightbox:before {
-  position: absolute;
+.wrapper i{
   top: 50%;
-  left: 50%;
-  margin-top: -13px;
-  margin-left: -13px;
-  opacity: 0;
-  color: #fff;
-  font-size: 18px;
-  content: var(--content, "");
-  pointer-events: none;
-  z-index: 9000;
-  transition: 0.4s;
-  display: block;
-}
-
-
-.tz-gallery .lightbox:after {
+  height: 44px;
+  width: 44px;
+  color: #343F4F;
+  cursor: pointer;
+  font-size: 1.15rem;
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
+  text-align: center;
+  line-height: 44px;
+  background: #fff;
+  border-radius: 50%;
+  transform: translateY(-50%);
+  transition: transform 0.1s linear;
+}
+.wrapper i:active{
+  transform: translateY(-50%) scale(0.9);
+}
+.wrapper i:hover{
+  background: #f2f2f2;
+}
+.wrapper i:first-child{
+  left: -22px;
+  display: none;
+}
+.wrapper i:last-child{
+  right: -22px;
+}
+.wrapper .carousel{
+  font-size: 0px;
+  cursor: pointer;
+  overflow: hidden;
+  white-space: nowrap;
+  scroll-behavior: smooth;
+}
+.carousel img{
   height: 100%;
-  opacity: 0;
-  background-color: rgba(51, 61, 70, 0.8);
-  content: '';
-  transition: 0.4s;
+  object-fit: cover;
+  user-select: none;
+  margin-left: 14px;
+  width: 100%;
+}
+.carousel img:first-child{
+  margin-left: 0px;
 }
 
-.tz-gallery .lightbox:hover:after,
-.tz-gallery .lightbox:hover:before {
-  opacity: 1;
+@media screen and (max-width: 900px) {
+  .carousel img{
+    width: calc(100% / 2);
+  }
 }
 
-.baguetteBox-button {
-  background-color: transparent !important;
-}
-
-.row p.desc {
-  margin: 40px;
-  font-size: 40px;
-  font-weight: 700;
-}
-
-.row p.desc span{
-  font-size: 35px;
-  font-weight: normal;
-  color: #000;
-}
-
-
-
-  /* Style the accordion container */
-  .accordion {
+@media screen and (min-width: 320px) {
+  .carousel img{
     width: 100%;
-    border-radius: 5px;
-    overflow: hidden;
-    padding: 30px;
   }
-
-  /* Style the accordion item */
-  .accordion-item {
-    background-color: #f9f9f9;
-    border-bottom: 3px solid #ffffff;
-  }
-
-  /* Style the accordion header (title) */
-  .accordion-header {
-    background-color: #122964;
-    color: #fff;
-    font-size: 45px;
-    font-weight: 600;
-    padding: 50px 20px;
-    position: relative; /* Add position relative */
-    cursor: pointer;
-  }
-
-  .accordion-header::before {
-    content: "\f067"; /* Unicode for plus icon */
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    font-size: 30px;
-    color: #ffffff;
-    position: absolute;
-    left: 40px;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-  /* Minus icon when accordion is active */
-.accordion-header.active::before {
-  content: "\f068"; /* Unicode for minus icon */
 }
-
-
-  /* Style the accordion content */
-  .accordion-content {
-    padding: 20px;
-    display: none;
-    transition: max-height 0.3s ease; /* Added transition for max-height */
-  }
-  .accordion-content.open {
-    display: block;
-  }
-
-  /* Style the active accordion header */
-  .active {
-    background-color: #0e1b64;
-    color: #fff;
-  }
