--- a/love.css
+++ b/love.css
@@ -12,67 +12,64 @@ body{
   min-height: 100vh;
   align-items: center;
   justify-content: center;
-  background: #343F4F;
+  background: #70513B;
 }
-.wrapper{
+.wrapper {
   display: flex;
   max-width: 1200px;
   position: relative;
-}
-.wrapper i{
-  top: 50%;
-  height: 44px;
-  width: 44px;
-  color: #343F4F;
-  cursor: pointer;
-  font-size: 1.15rem;
-  position: absolute;
-  text-align: center;
-  line-height: 44px;
-  background: #fff;
-  border-radius: 50%;
-  transform: translateY(-50%);
-  transition: transform 0.1s linear;
-}
-.wrapper i:active{
-  transform: translateY(-50%) scale(0.9);
-}
-.wrapper i:hover{
-  background: #f2f2f2;
-}
-.wrapper i:first-child{
-  left: -22px;
-  display: none;
-}
-.wrapper i:last-child{
-  right: -22px;
-}
-.wrapper .carousel{
-  font-size: 0px;
-  cursor: pointer;
-  overflow: hidden;
-  white-space: nowrap;
-  scroll-behavior: smooth;
-}
-.carousel img{
-  height: 100%;
-  object-fit: cover;
-  user-select: none;
-  margin-left: 14px;
-  width: 100%;
-}
-.carousel img:first-child{
-  margin-left: 0px;
+  overflow-x: hidden; /* Ensure only one image is visible */
+  flex-direction: column; /* Arrange children in a column */
+  align-items: center; /* Center children horizontally */
 }
 
+.carousel {
+  display: flex;
+  overflow-x: hidden; /* Ensure only one image is visible */
+  overflow-y: hidden; /* Ensure no vertical scrollbar appears */
+  scroll-snap-type: x mandatory; /* Ensure smooth scrolling */
+}
+
+.carousel img {
+  flex: 0 0 auto; /* Ensure the images don't shrink */
+  scroll-snap-align: start; /* Ensure each image aligns to the start */
+  transition: scroll 0.5s ease-in-out; /* Apply smooth transition */
+}
+
+.dots-container {
+  display: flex; /* Ensure dots are displayed in a row */
+  justify-content: center; /* Center the dots horizontally */
+  margin-top: 10px; /* Add space between the carousel and the dots */
+}
+
+.dot {
+  width: 10px;
+  height: 10px;
+  background-color: #9f7748;
+  border-radius: 50%;
+  margin: 0 5px;
+}
+.dot.active {
+  background-color: rgb(201, 198, 198) !important; /* Change color of active dot */
+}
+
+
+
 @media screen and (max-width: 900px) {
-  .carousel img{
+  .carousel img {
     width: calc(100% / 2);
   }
 }
 
 @media screen and (min-width: 320px) {
-  .carousel img{
+  .carousel img {
     width: 100%;
   }
+}
+
+
+/* Hide icons */
+#left,
+#right {
+  display: none;
 }
